--- a/participants/index.html
+++ b/participants/index.html
@@ -7,20 +7,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/home.css">
     <title>Document</title>
 </head>
 
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
+            <a href="../workshops" >See all workshops</a>
         </div>
     </header>
-    <main class="">
-     
+    <button id="logout">Logout</button>
+    <main class="create-main">
+        <h2>Add a new participant</h2>
+        <form class="participant-form">
+            <label>
+                Participant's name
+                <input name="participant-name" />
+            </label>
+            <label>
+                sign up for:
+                <select name="workshop-id">
+
+                </select>    
+            </label>
+            <button>Submit</button>
+        </form>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
