--- a/workshops/index.html
+++ b/workshops/index.html
@@ -16,12 +16,17 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="../assets/big-logo.png" />
+            <a href="../workshops" >See all workshops</a>
+            <a href="../participants" >Add a participant</a>
         </div>
     </header>    
     <button id="logout">Logout</button>
     <main>
-        <h1>You are logged in!</h1>
+        <h2>Available workshop classes</h2>
+
+        <div class="workshops-container">
+
+        </div>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
